.deprecated/kubernetes/online/traefik/traefik.yaml
# ---
# Source: https://docs.traefik.io/user-guides/crd-acme/
# apiVersion: apiextensions.k8s.io/v1beta1
# kind: CustomResourceDefinition
# metadata:
#   name: ingressroutes.traefik.containo.us
# spec:
#   group: traefik.containo.us
#   version: v1alpha1
#   names:
#     kind: IngressRoute
#     plural: ingressroutes
#     singular: ingressroute
#   scope: Namespaced
# ---
# apiVersion: apiextensions.k8s.io/v1beta1
# kind: CustomResourceDefinition
# metadata:
#   name: ingressroutetcps.traefik.containo.us
# spec:
#   group: traefik.containo.us
#   version: v1alpha1
#   names:
#     kind: IngressRouteTCP
#     plural: ingressroutetcps
#     singular: ingressroutetcp
#   scope: Namespaced
# ---
# apiVersion: apiextensions.k8s.io/v1beta1
# kind: CustomResourceDefinition
# metadata:
#   name: middlewares.traefik.containo.us
# spec:
#   group: traefik.containo.us
#   version: v1alpha1
#   names:
#     kind: Middleware
#     plural: middlewares
#     singular: middleware
#   scope: Namespaced
# ---
# apiVersion: apiextensions.k8s.io/v1beta1
# kind: CustomResourceDefinition
# metadata:
#   name: tlsoptions.traefik.containo.us
# spec:
#   group: traefik.containo.us
#   version: v1alpha1
#   names:
#     kind: TLSOption
#     plural: tlsoptions
#     singular: tlsoption
#   scope: Namespaced
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: online-traefik-ingress-controller
  namespace: online
  labels:
    k8s-app: online-traefik-ingress-lb
    app: online-traefik-ingress-lb
spec:
  replicas: 1
  selector:
    matchLabels:
      name: online-traefik-ingress-lb
  template:
    metadata:
      labels:
        k8s-app: online-traefik-ingress-lb
        name: online-traefik-ingress-lb
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - linux-wayne
      serviceAccountName: online-traefik-ingress-controller
      terminationGracePeriodSeconds: 60
      volumes:
        - name: online-traefik-config-volume
          persistentVolumeClaim:
            claimName: online-traefik-config-claim
          # defaultMode: 0600
      containers:
      - name: online-traefik-ingress-lb
        image: traefik:v2.0
        ports:
        - name: http
          containerPort: 80
          hostPort: 22280
        - name: https
          containerPort: 443
          hostPort: 22443
        - name: admin
          containerPort: 8080
        - name: prometheus
          containerPort: 8082
        args:
          - --api.insecure
          - --accesslog
          - --metrics=true
          # - --metrics.influxdb=true
          # - --metrics.influxdb.address="monitoring-influxdb.monitoring:80"
          # - --metrics.influxdb.database="onlinetraefik"
          - --metrics.prometheus=true
          - --metrics.prometheus.entryPoint=metrics
          - --entrypoints.metrics.Address=:8082
          - --entrypoints.web.Address=:80
          - --entrypoints.websecure.Address=:443
          - --providers.kubernetescrd
          - --providers.kubernetescrd.namespaces=online,plusone
          - --providers.kubernetescrd.labelselector=expose=online
          - --certificatesResolvers.default.acme.httpChallenge=true
          - --certificatesresolvers.default.acme.tlschallenge
          - --certificatesresolvers.default.acme.email=basraven@gmail.com
          - --certificatesresolvers.default.acme.storage=acme/acme.json
        volumeMounts:
          - name: online-traefik-config-volume
            mountPath: /acme
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: online-traefik-ingress-lb
  name: online-traefik-ingress-lb
  namespace: online
spec:
  ports:
  - name: admin
    targetPort: 8080
    port: 8080
  selector:
    k8s-app: online-traefik-ingress-lb
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-web-ui-online
  namespace: online
  annotations:
    kubernetes.io/ingress.class: traefik
  labels:
    expose: "local"
spec:
  rules:
  - host: traefik-online.bas
    http:
      paths:
      - path: /
        backend:
          serviceName: online-traefik-ingress-lb
          servicePort: 8080

---
# Source: https://docs.traefik.io/v2.0/middlewares/ratelimit/
# Here, an average of 100 requests per second is allowed.
# In addition, a burst of 50 requests is allowed.
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: online-ratelimit
  namespace: online
spec:
  rateLimit:
      average: 3
      burst: 5
---
# Redirect to https
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: http-redirect-to-https
  namespace: online
spec:
  redirectScheme:
    scheme: https
# Replace path with regex
# apiVersion: traefik.containo.us/v1alpha1
# kind: Middleware
# metadata:
#   name: test-replacepathregex
# spec:
#   replacePathRegex:
#     regex: ^/foo/(.*)
#     replacement: /bar/$1
